Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57768

Qt Quick stencil clip broken with core profile contexts

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.0 Beta 2
    • 5.6, 5.7, 5.8
    • Quick: SceneGraph
    • None
    • 0a88774a0f11bf96a87012ac4a83e31ced19460b

    Description

      Renderer::updateStencilClip(const QSGClipNode *clip) uses client-side pointers when rendering the clip shape. This (the glVertexAttribPointer call) will just fail with core profile contexts. The end result is broken looking stencil-based clips.

      It is not the only place where Qt Quick is still broken wrt core profile contexts (think QSG_VISUALIZE), but unlike the optional debugging tools, stencil-based clips are a core feature and so should be functional always.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes