Fix stencil clips with core profile contexts

Client-side pointers are not supported. Start using a VBO instead.

Task-number: QTBUG-57768
Change-Id: Ia7ac9b0838d837b02e8bf99fcd22f0373cb357c9
Reviewed-by: Gunnar Sletta <gunnar@sletta.org>